--- a/main.tex
+++ b/main.tex
@@ -101,7 +101,16 @@
         \\
         Теорема Дедекинда:
         \\
-        Среди сечений множества $\mathbb{R}$ сечений вида {\large \textcircled{\small C}} нет $\implies$ непрерывность $\mathbb{R}$.\
+        Среди сечений множества $\mathbb{R}$ сечений вида {\large \textcircled{\small C}} нет $\implies$ непрерывность $\mathbb{R}$.
+
+        \subsubsection*{Десятичные дроби}
+        Пусть числу $\alpha \in \mathbb{R}$ соответствует сечение $(\mathcal{A_*};\mathcal{A^*})$. За $a_0$ обозначим наибольшее целое число из $\mathcal{A_*}$.
+        Отрезок $[a_0;a_0 + 1]$ поделим на $10$ отрезков одинаковой длины и выберем среди них тот, который содержит $\alpha$:
+        $\alpha \in [a_0 + \frac{a_1}{10};a_0 + \frac{a_1 + 1}{10}]$.
+        На шаге $n$ $\alpha \in [a_0 + \frac{a_1}{10} + ... + \frac{a_n}{10};a_0 + \frac{a_1}{10} + ... + \frac{a_n + 1}{10}]$.
+        Бесконечную десятичную дробь $a_0,a_1a_2...a_n...$ можно считать представлением действительного числа $\alpha$.
+        Заметим, что если $\alpha$ можно представить как $\frac{p}{10^n}, p \in \mathbb{Z}, n \in \mathbb{N}$, (то есть $\alpha$ -- сократимая десятичная дробь)
+        то $\alpha$ соответствуют две десятичные дроби: $a_0,a_1a_2...a_n000...$ и $a_0,a_1a_2...(a_n - 1)999...$ .
         
         
     \subsection*{Теорема  о  существовании  и  единственности точной верхней (нижней) грани числового множества, ограниченного сверху (снизу)}
@@ -147,7 +156,7 @@
         \\
         Теперь расставим соответствующие каждому $H$ рациональные числа по порядку и пронумеруем их:
         \\
-        $\frac{1, 1}, \frac{1, 2}, \frac{2, 1}, \frac{1, 3}, \frac{3, 1}, \frac{1, 4}, \frac{2, 3}, \frac{3, 2}, \frac{4, 1}, ...$
+        $\frac{1}{1}, \frac{1}{2}, \frac{2}{1}, \frac{1}{3}, \frac{3}{1}, \frac{1}{4}, \frac{2}{3}, \frac{3}{2}, \frac{4}{1}, ...$
         \\
         Так как множество положительных рациональных чисел счетно, то и аналогичным образом счетно множество отрицательных рациональных чисел,
         а их объединение в объединении вместе с конечным множетсвом, состоящим из $0$, так же счетно и является $\mathbb{R}$.
