--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,13 @@
 \title{Экзаменационная программа по курсу «Введение в математический анализ», осенний семестр 2020–2021 учебного года}
 \date{}
 
+\newcommand{\theorem}{\textbf{Теорема:} }
+\newcommand{\lemma}{\textbf{Лемма:} }
+\newcommand{\proof}{\textbf{Доказательство:} }
+\newcommand{\seq}[1]{$\{#1\}$}
+\newcommand{\intr}[2]{$(#1;#2)$}
+\newcommand{\Q}{$\mathbb{Q}$}
+
 \begin{document}
     \maketitle
     \pagenumbering{gobble}
@@ -471,5 +478,169 @@
         
         
     \newpage
+    
+    \section{}
+    \subsection*{Определения предела функции в терминах окрестностей и в терминах последовательностей, их эквивалентность}
+        Далее подразумевается, что функция $f(x)$ определена в некой выколотой $\Delta$ окрестности точки $x_0$: $X = \{x: 0 < |x - x_0| < \Delta\}$.
+        \subsubsection*{Предел функции в точке по Коши}
+        Число $a = \lim_{x \to x_0} f(x)$ называется пределом функции $f(x)$ в точке $x_0$, если:
+        \[ \forall \epsilon > 0 \exists \delta = \delta(\epsilon)> 0: \forall x \in X: 0 < |x - x_0| < \delta \longmapsto |f(x) - f(x_0)| < \epsilon \]
+    
+    \subsubsection*{Предел функции а точке по Гейне}
+        Последовательностью Гейне назовем сходящуюся к $x_0$ последовательность $\{x_n\}$, где $x_n \neq x_0$.
+        \\
+        Число $a$ называется пределом функции в точке $x_0$, если для произвольной сходящейся к $x_0$ последовательности Гейне с какого-то $n_0$ определена $f(x_n)$,
+        и $\lim_{n \to \infty} f(x_n) = a$
+    
+    \subsubsection*{Эквивалентность определений предела по Коши и по Гейне}
+        \textbf{Теорема:} определения предела функции в точке по Коши и по Гейне эквивалентны.
+        \\
+        \textbf{Доказательство:}
+        \\
+        Пусть $a$ -- предел функции в точке $x_0$ по Коши:
+        \[ \forall \epsilon > 0 \exists \delta = \delta(\epsilon): \forall x \in X: 0 < |x_n - x_0| < \delta \]
+        Для любой последовательности Гейне, сходящейся к $x_0$, найдется $N = N(\delta) = N(\epsilon): 
+        \forall n \ge N \longmapsto 0 < |x_n - x_0| < \delta \implies |f(x_n) - a| < \epsilon \implies \lim_{n \to \infty} f(x_n) = a$. $f(x_n)$ сходится к $a$ для произвольной последовательности
+        Гейне, следовательно $a$ -- предел $f(x)$ в точке $x_0$ по Гейне.
+        \\
+        Пусть $a$ -- предел функции в точке $x_0$ по Гейне, а по Коши он не равен $a$:
+        \[ \exists \epsilon_0 > 0: \forall \delta > 0 \exists x_\delta: 0 < |x_\delta - x_0| < \delta \longmapsto |f(x_\delta) - a| \ge \epsilon_0 \]
+        \[\delta_n = \frac{1}{n} > 0 \implies \exists x_n: 0 < |x_n - x_0| < \delta_n \longmapsto |f(x_n) - a| \ge \epsilon_0 \]
+        То есть существует такая сходящаяся к $x_0$ последовательность Гейне $\{x_n\}$, для которой $\{f(x_n)\}$ не сходится к $a$, что противоречит тому, что $a$ -- предел по Гейне.  
+    
+    \subsection*{Свойства пределов функции}
+        Вытекают из свойств предела последовательностей и применения определения предела функции по Гейне.
+    
+    \subsection*{Критерий Коши существования конечного предела функции}
+        Функция $f(x)$ удовлетворяет условию Коши в точке $x_0$, если:
+        \[ \forall \epsilon > 0 \exists \delta = \delta(\epsilon): \forall x_1, x_2 \in X: 0 < |x_1 - x_0| < \delta \wedge 0 < |x_2 - x_0| < \delta \longmapsto
+        |f(x_1) - f(x_2)| < \epsilon \]
+        \textbf{Теорема:} для того, чтобы функция $f(x)$ в имела конечный предел в точке $x_0$, необходимо и достаточно, чтобы она удовлетворяла условию Коши в точке $x_0$.
+        \\
+        \textbf{Доказательство:}
+        \\
+        Необходимость: пусть $a = \lim_{x \to x_0} f(x)$:
+        \[ \forall \epsilon > 0 \exists \delta = \delta(\epsilon) > 0: \forall x_1, x_2 \in X: 0 < |x_1 - x_0| < \delta \wedge 0 < |x_2 - x_0| < \delta \longmapsto
+        |(f(x_1) - f(x_0)| < \frac{\epsilon}{2} \wedge |(f(x_0) - f(x_2)| < \frac{\epsilon}{2} \]
+        \[ -\frac{\epsilon}{2} < f(x_1) - f(x_0) < \frac{\epsilon}{2} \]
+        \[ -\frac{\epsilon}{2} < f(x_0) - f(x_2) < \frac{\epsilon}{2} \]
+        \[ -\epsilon < f(x_1) - f(x_2) < \epsilon \]
+        \[ |f(x_1) - f(x_2)| < \epsilon \]
+        следовательно, $f(x)$ удовлетворяет условию Коши в точке $x_0$.
+        \\
+        Достаточность: пусть $f(x)$ удовлетворяет условию Коши в точке $x_0$:
+        \[ \forall \epsilon > 0 \exists \delta = \delta(\epsilon): \forall x_1, x_2 \in X: 0 < |x_1 - x_0| < \delta \wedge 0 < |x_2 - x_0| < \delta \longmapsto
+        |f(x_1) - f(x_2)| < \epsilon \]
+        Возьмем произвольную сходящуюся к $x_0$ последовательность Гейне.
+        \[ \forall \delta \exists N = N(\delta) = N(\epsilon): \forall n, m \ge N \longmapsto 0 < |x_n - x_0| < \delta \wedge 0 < |x_m - x_0| < \delta \longmapsto
+        |f(x_n) - f(x_m)| < \epsilon \]
+        Следовательно $\{f(x_n)\}$ фундаментальна и сходится к некому $a$.
+        \\
+        Покажем, что $\{f(x_n)\}$ сходится к одному $a$ вне зависимости от выбора последовательности Гейне $\{x_n\}$.
+        \\
+        Пусть $\{x'_n\}$ и $\{x''_n\}$ сходятся к $x_0$, $\{f(x'_n)\}$ сходится к $a'$, $\{f(x''_n)\}$ сходится к $a''$.
+        Построим новую последовательность Гейне $\{\bar{x}_n\} = \{x'_1, x''_1, x'_2, x''_2, ..., x'_n, x''_n, ... \}$. $\{f(\bar{x}_n)\}$ -- фундаментальная, значит она сходится
+        к $\bar{a}$. Раз $\{f(\bar{x}_n)\}$ сходится к $\bar{a}$, значит $\{f(x'_n)\}$ и $a'$, $\{f(x''_n)\}$ сходятся к $\bar{a}$, $\bar{a} = a' = a''$.
+        Следовательно $\bar{a}$ -- предел $f(x)$ в точке $x_0$ по Гейне. 
+    
+    \subsection*{Предел сложной функции}
+        Пусть функция $f(x)$ определена в выколотой $\Delta_1$ окрестности точки $x_0$: $X = \{x: 0 < |x - x_0| < \Delta_1\}$,
+        а функция $g(x)$ определена в выколотой $\Delta_2$ окрестности точки $y_0$: $Y = \{y: 0 < |y - y_0| < \Delta_2\}$,
+        $f(X) \subseteq Y$.
+        \\
+        \textbf{Теорема:} Если предел функции $f(x)$ в точке $x_0$ равен $y_0$, сама $f(x)$ на $X$ не принимает значения $y_0$, предел функции $g(y)$ в точке $y_0$ равен $a$,
+        то предел функции $h(x) = g(f(x))$ в точке $x_0$ равен $a$.
+        \\
+        \textbf{Доказательство:}
+        \\
+        Для произвольной сходящейся к $x_0$ последовательности Гейне $\{x_n\}$ $\{f(x_n)\}$ является сходящейся к $y_0$ последовательностью Гейне.
+        Следовательно, $\{g(f(x_n))\} = \{h(x_n)\}$ сходится к $a$, $a$ -- предел в точке $x_0$ функции $h(x)$ про Гейне.
+    
+    
+    \subsection*{Существование односторонних пределов у монотонных функций}
+        \textbf{Теорема:} если $f(x)$ определена и монотонна на $(a;b)$, то $ \forall x_0 \in (a;b) \exists f(x_0 - 0) \wedge \exists f(x_0 + 0)$.
+        Если $f(x)$ неубывает или возрастает на $(a;b)$, то $f(x_0 - 0) \le f(x_0) \le f(x_0 + 0)$.
+        Если $f(x)$ невозрастает или убывает на $(a;b)$, то $f(x_0 - 0) \ge f(x_0) \ge f(x_0 + 0)$.
+        \\
+        \textbf{Доказательство:} пусть $f(x)$ возрастает на $(a;b)$.
+        Докажем существование $f(x - 0) \forall x$:
+        \[ \forall x_0 \in (a;b) \forall x \in (a;x_0) \longmapsto f(x) < f(x_0) \implies \exists \sup_{(a;x_0)} f(x) = \alpha \le f(x_0)\]
+        \[ \forall \epsilon \exists x_\epsilon \in (a;x_0): f(x_\epsilon) > \alpha - \epsilon \]
+        \[ \delta = \delta(\epsilon) = x_0 - x_\epsilon > 0 \]
+        \[ \forall x: 0 < x_0 - x < \delta \longmapsto \alpha - \epsilon < f(x) \le \alpha\]
+        \[ \alpha - \epsilon < f(x) < \alpha + \epsilon \]
+        \[ |f(x) - \alpha| < \epsilon \]
+        \[ f(x_0 - 0) = \alpha \]
+        существование $f(x + 0) \forall x$ доказывается аналогичным образом.
+
+
+    \newpage
+
+    \section{}
+
+    \subsection*{Непрерывность функции в точке}
+        Функция $f(x)$ называет непрерывной в точке $x_0$, если 
+        \[ \lim_{x \to x_0} f(x) = f(x_0) \]
+
+
+    \subsection*{Свойства функций, непрерывных в точке}
+        \textbf{Теорема:} если функции $f(x)$ и $g(x)$ непрерывны в точке $x_0$, то функции $f(x) + g(x)$ и $f(x)g(x)$ тоже непрерывны в $x_0$.
+        Если $g(x_0) \neq 0$, то функция $\frac{f(x)}{g(x)}$ непрерывна в точке $x_0$.
+        \\
+        \textbf{Доказательство:} 
+        Следует из свойств арифметических операций с пределами.
+        \\
+        \\
+        \textbf{Теорема:} если функция $f(x)$ определена и непрерывна в точке $x_0$, то существует такая $\delta$-окрестность точки $x_0$,
+        в пределах которой $f(x)$ сохраняет свой знак.
+        \\
+        \\
+        Функцию $\Delta y(x_0, \Delta x)$ в точке $x_0$ определим как $f(x_0 + \Delta x) - f(x_0)$.
+        \\
+        \textbf{Теорема:} если функция $f(x)$ непрерывна в точке $x_0$, то $\lim_{\Delta x \to 0} \Delta y(x_0, \Delta x) = 0$.  
+        
+         
+    \subsection*{Односторонняя непрерывность}
+        Функция $f(x)$ называет одностонне непрерывной в точке $x_0$, если 
+        \[ \lim_{x \to x_0 \pm 0} f(x) = f(x_0) \]
+        
+        
+    \subsection*{Непрерывность сложной функции}
+        \textbf{Теорема:} если функция $f(x)$ непрерывна в точке $x_0$, а функция $g(y)$ непрерывна в точке $y_0 = f(x_0)$, то функция $h(x) = g(f(x_0))$ непрерывна
+        в точке $x_0$.
+        \\
+        \textbf{Доказательство:} по теореме о переходе к пределу под знаком непрерывной функции $\lim_{x \to x_0} g(f(x)) = g(y_0) = g(f(x_0))$.
+        
+    \subsection*{Теорема о переходе к пределу под знаком непрерывной функции}       
+        \textbf{Теорема:} если предел функции $f(x)$ точке $x_0$ равен $y_0$, а функция $g(y)$ непрерывна в точке $y_0 = f(x_0)$, то
+        $\lim_{x \to x_0} g(f(x)) = g \left(\lim_{x \to x_0} f(x) \right)$.
+        \\
+        \textbf{Доказательство:}
+        возьмем сходящуюся к $x_0$ последовательность Гейне $\{x_n\}$, тогда последовательность $\{y_n\} = \{f(x_n)\}$ сходится к $y_0$.
+        Последовательность $\{g(y_n)\}$ cходится к $g(y_0) = g(\lim_{n \to \infty} f(x_n))$.
+        Следовательно $\lim_{x \to x_0} g(f(x)) = g \left(\lim_{x \to x_0} f(x) \right)$.
+
+
+    \subsection*{Точки разрыва, их классификация. Разрывы монотонных функций}
+        Классификация точек разрыва:
+        \begin{itemize}
+            \item точка $x_0$ -- устранимая точка разрыва, если $f(x)$ либо не определена, либо не непрерывна в точке $x_0$.
+            \item точка $x_0$ -- точка разрыва первого рода, если для $f(x)$ существуют и не равны левый и правый пределы в точке $x_0$.
+            Их разность $\omega(x_0) = f(x_0 + 0) - f(x_0 - 0)$ называется скачком функции в точке $x_0$.
+            \item точка $x_0$ -- точка разрыва второго рода, если для $f(x)$ не существует конечного левого или правого предела в точке $x_0$.
+        \end{itemize}
+        \theorem монотонной функция, определенная на \intr{a}{b}, имеет только точки разрыва первого рода.
+        \proof пусть $f(x)$ возрастает на \intr{a}{b}. Точек разрыва второго рода нет в силу теоремы о существование односторонних пределов у монотонных функций.
+        В силу той же теоремы и неравенстава $f(x - 0) \le f(x_0) \le f(x_0 + 0)$, 
+        $f(x - 0) = f(x_0 + 0) = \gamma \neq f(x_0)$ не может выполняться, и следовательно $x_0$ не может быть устранимой точкой разрыва.
+        \\
+        \\
+        \theorem множество точек разрыва определенной на \intr{a}{b} монотонной функции $f(x)$ не более, чем счетно.
+        \\
+        \proof каждой точке разрыва $x_0$ соответствует интервал \intr{f(x_0 - 0)}{f(x_0 + 0)} точки которого за исключением, быть может, $f(x_0)$,
+        не входят в область определения $f(x)$. 
+        В силу монотонности $f(x)$ эти интервалы не пересекаются. На каждом интервале выберем рациональную точку.
+        Таким образом мы установили взаимнооднозначное соответствие между точками разрыва и подмножеством счетного множества рациональных чисел \Q.
+    
 
 \end{document}
